--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p style="text-align: center;">This is a website. I have added pictures about some cool topics.</p>
     <br>
     <h2 class="t-c">Chemistry</h2>
-    <img src="Images/download (1).jpg" alt="Chemistry" style="float: left;" id="img-c">
+    <img src="download (1).jpg" alt="Chemistry" style="float: left;" id="img-c">
     <p id="p-c">Chemistry is the scientific discipline involved with elements and compounds composed of atoms, molecules and ions: their composition, structure, properties, behavior and the changes they undergo during a reaction with other substances.
     <br>
     In the scope of its subject, chemistry occupies an intermediate position between physics and biology.
@@ -32,7 +32,7 @@
 <br>
 <br>
     <h2 class="t-b">Biology</h2>
-    <img src="Images/1564390_868e_3.jpg" alt="Biology" style="float: left;" id="img-b">
+    <img src="1564390_868e_3.jpg" alt="Biology" style="float: left;" id="img-b">
     <p id="p-b">
         Biology is the natural science that studies life and living organisms, including their physical structure, chemical processes, molecular interactions, physiological mechanisms, development and evolution.
         <br>
@@ -55,7 +55,7 @@
 <br>
 <br>
     <h2 class="t-t">Telecommunications</h2>
-    <img src="Images/3b44e819-0a27-441b-87fd-c88a60003168.jpeg" alt="" style="float: left;" id="img-t">
+    <img src="3b44e819-0a27-441b-87fd-c88a60003168.jpeg" alt="" style="float: left;" id="img-t">
     <p id="p-t">
         Telecommunication (from Latin communicatio, referring to the social process of information exchange, and the Greek prefix tele-, meaning distance) is the transmission of information by various types of technologies over wire, radio, optical or other electromagnetic systems.It has its origin in the desire of humans for communication over a distance greater than that feasible with the human voice, but with a similar scale of expediency; thus, slow systems (such as postal mail) are excluded from the field.
     </p>
@@ -76,7 +76,7 @@
 <br>
 <br>
     <h2 class="t-a">Aerospace engineering</h2>
-    <img src="Images/aerospace-engineering.jpg" alt="" style="float: left;" id="img-a">
+    <img src="aerospace-engineering.jpg" alt="" style="float: left;" id="img-a">
     <p id="p-a">
         Aerospace engineering is the primary field of engineering concerned with the development of aircraft and spacecraft. It has two major and overlapping branches: aeronautical engineering and astronautical engineering. Avionics engineering is similar, but deals with the electronics side of aerospace engineering.
     </p>
@@ -96,7 +96,7 @@
 <br>
 <br>
     <h2 class="t-p">Physics</h2>
-    <img src="Images/physics_blackboard.jpg" alt="" style="float: left;" id="img-p">
+    <img src="physics_blackboard.jpg" alt="" style="float: left;" id="img-p">
     <p id="p-p">
         Physics (from Ancient Greek: φυσική (ἐπιστήμη), romanized: physikḗ (epistḗmē), lit. 'knowledge of nature', from φύσις phýsis 'nature') is the natural science that studies matter, its motion and behavior through space and time, and the related entities of energy and force. Physics is one of the most fundamental scientific disciplines, and its main goal is to understand how the universe behaves.
         <br>
@@ -119,7 +119,7 @@
 <br>
 <br>
     <h2 class="t-m">Math</h2>
-    <img src="Images/c8e5753370bad54c7977d485e0a0e29d.jpg" alt="" style="float: left;" id="img-m">
+    <img src="c8e5753370bad54c7977d485e0a0e29d.jpg" alt="" style="float: left;" id="img-m">
     <p id="p-m">
         Mathematics (from Greek: μάθημα, máthēma, 'knowledge, study, learning') includes the study of such topics as quantity (number theory),structure (algebra), space (geometry), and change (mathematical analysis). It has no generally accepted definition.
         <br>
@@ -140,7 +140,7 @@
 <br>
 <br>
     <h2 class="t-cs">Computer science</h2>
-    <img src="Images/unnamed.jpg" alt="" id="img-cs" style="float: left;">
+    <img src="unnamed.jpg" alt="" id="img-cs" style="float: left;">
     <p id="p-cs">
     Computer science is the study of computation and information. Computer science deals with theory of computation, algorithms, computational problems and the design of computer systems hardware, software and applications.[3][4] Computer science addresses both human-made and natural information processes, such as communication, control, perception, learning and intelligence especially in human-made computing systems and machines.
     <br>
